<resources>
    <string name="app_name">网星</string>
    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>
    <string name="action_settings">设置</string>
    <string name="username">名称</string>
    <string name="usersign">xxxxxxx@qq.com</string>
    <string name="event_content">活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容活动详细内容</string>
    <string name="cart_content">如果你可以肯定我的一片心意，如果你可以回应我的一个问题，如果你能够愿意请坐下来聆听，这一份在我心底最深处的秘密</string>
    <string name="commentname"></string>
    <string name="commentdetail"></string>
    <string name="comment_num">0</string>
    <string name="comment_time"></string>
    <string name="title_activity_login">登录</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <!-- Strings related to login -->
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register_in">注册</string>
    <string name="action_register">没有账号？去注册</string>
    <string name="action_login">已有账号？去登陆</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱地址错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_info">信息</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_personaldata">个人资料</string>.
    <string name="title_management">账户管理</string>

    <!-- Strings related to Settings -->

    <!-- 实名认证设置 -->
    <string name="pref_header_realname">实名认证</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_albums">AlbumsActivity</string>
    <string name="title_activity_publish">写点内容吧...</string>



    <string name="action_help">帮助</string>
    <string name="action_opinion">发送反馈</string>
    <string name="action_copylink">复制连接</string>
    <string name="action_refresh">刷新</string>
    <string name="menu_settings">Settings</string>
    <string name="login_username">登录账号</string>
    <string name="login_password">登录密码</string>
    <string name="regist_password">确认密码</string>
    <string name="search_all">搜索</string>
    <string name="login_btn_text">登录</string>
    <string name="regist_btn_text">注册</string>
    <string name="login_title">网星__登录</string>
    <string name="regist_title">网星__注册</string>
    <string name="login_tip_user">手机号/用户ID</string>
    <string name="login_tip_pwd">请输入登录密码</string>
    <string name="login_regist">没有账号 去注册</string>
    <string name="regist_login">已有账号 去登录</string>
    <string name="regist_tip_user">请输入您的手机号</string>
    <string name="regist_tip_pwd1">请设置您密码</string>
    <string name="regist_tip_pwd2">请重复上面密码</string>
    <string name="demoText">admin</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>


    <string-array name="spingarr">
        <item>允许&#12288;&#12288;</item>
        <item>需要验证</item>
        <item>拒绝添加</item>
    </string-array>

    <string-array name="spingarr1">
        <item>允许&#12288;&#12288;</item>
        <item>需要验证</item>
        <item>拒绝邀请</item>
    </string-array>

    <string-array name="spingarr2">
        <item>公开&#12288;&#12288;</item>
        <item>好友&#12288;&#12288;</item>
        <item>私人&#12288;&#12288;</item>
    </string-array>

    <string-array name="type">
        <item>A型</item>
        <item>B型</item>
        <item>AB型</item>
        <item>O型</item>
    </string-array>

    <string-array name="education">
        <item>初中</item>
        <item>高中/中专</item>
        <item>大专</item>
        <item>本科</item>
        <item>研究生/硕士</item>
        <item>博士</item>
        <item>其他</item>
    </string-array>

    <string-array name="certificates">
        <item>身份证</item>
        <item>学生证</item>
        <item>教师证</item>
        <item>其他</item>
    </string-array>

    <string-array name="pass_type">

        <item>活动</item>

        <item>签到</item>

        <item>请假</item>

        <item>评价</item>

        <item>考勤</item>

        <item>讨论</item>


        <item>详情</item>



    </string-array>

</resources>
