<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copylink"
        android:orderInCategory="100"
        android:title="@string/action_copylink"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_site"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_opinion"
        android:orderInCategory="100"
        android:title="@string/action_opinion"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>
