<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/main_padding">

    <ImageView
        android:id="@+id/comment_user_logo"
        android:layout_width="@dimen/userface"
        android:layout_height="@dimen/userface"
        android:src="@drawable/info_comuser" />

    <TextView
        android:id="@+id/comment_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_ten"
        android:paddingTop="@dimen/padding_five"
        android:paddingBottom="@dimen/padding_four"
        android:layout_toRightOf="@+id/comment_user_logo"
        android:textColor="@color/name"
        android:text="@string/commentname"
        android:textStyle="bold"
        android:textSize="@dimen/fontsize" />
    <TextView
        android:id="@+id/comment_ctime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_toRightOf="@+id/comment_user_name"
        android:text="@string/comment_time"
        android:paddingTop="@dimen/padding_five"
        android:gravity="right"
        android:textColor="@color/comment_time"
        android:textSize="@dimen/comment_time" />
    <TextView
        android:id="@+id/comment_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comment_user_name"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/comment_user_logo"
        android:textColor="@color/black"
        android:text="@string/commentdetail"
        android:lineSpacingMultiplier="1.0"
        android:textSize="@dimen/fontsize" />
</RelativeLayout>
