<?xml version="1.0" encoding="UTF-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="#EEEEEE"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="17dp">

            <ImageView
                android:id="@+id/HomeBodyUser"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/course_tou" />

            <TextView
                android:id="@+id/HomeBodyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/HomeBodyUser"
                android:paddingTop="4dp"
                android:text="@string/username"
                android:textColor="@color/name"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HomeBodyContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.0"
                android:paddingBottom="@dimen/main_padding"
                android:paddingLeft="@dimen/main_padding"
                android:paddingRight="@dimen/main_padding"
                android:paddingTop="@dimen/padding_zero"
                android:text="@string/cart_content"
                android:textColor="@color/black"
                android:textSize="@dimen/fontsize" />

            <ImageView
                android:id="@+id/HomeBodyImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/info_pic1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:padding="@dimen/padding_eight">

            <ImageView
                android:id="@+id/HomeBodyAgreeImg"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/course_xfavorite" />

            <ImageView
                android:id="@+id/HomeBodyShareImg"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                android:src="@drawable/course_xreply" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/HomeBodyComment"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="5dp"
                    android:layout_toLeftOf="@+id/HomeBodyNum"
                    android:src="@drawable/course_xcomment" />

                <TextView
                    android:id="@+id/HomeBodyNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="7dp"
                    android:paddingLeft="@dimen/padding_zero"
                    android:paddingRight="@dimen/padding_eight"
                    android:paddingTop="7dp"
                    android:text="@string/comment_num"
                    android:textSize="@dimen/fontsize" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/HomeBodyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </LinearLayout>
</android.support.v7.widget.CardView>