<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_marginBottom="10dp"
    android:background="@color/cardbackground"
    app:cardCornerRadius="0dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding">

            <ImageView
                android:id="@+id/iv_user_logo"
                android:layout_width="@dimen/userface"
                android:layout_height="@dimen/userface"
                android:src="@drawable/info_tou" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingTop="@dimen/padding_four"
                android:layout_toRightOf="@+id/iv_user_logo"
                android:textColor="@color/name"
                android:text="@string/username"
                android:textSize="@dimen/fontsize"
                android:textStyle="bold"/>
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_zero"
            android:paddingRight="@dimen/main_padding"
            android:paddingLeft="@dimen/main_padding"
            android:paddingBottom="@dimen/main_padding"
            android:textSize="@dimen/fontsize"
            android:text="@string/cart_content"
            android:textColor="@color/black"
            android:lineSpacingMultiplier="1.0"
            android:id="@+id/tv_info_content" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/info_pic1"
            android:id="@+id/iv_info_image" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_eight">
            <ImageView
                android:id="@+id/iv_agree_img"
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_marginLeft="@dimen/padding_six"
                android:layout_marginRight="@dimen/padding_fifteen"
                android:layout_marginTop="@dimen/padding_five"
                android:layout_marginBottom="@dimen/padding_five"
                android:tag="no"
                android:src="@drawable/info_xfavorite"/>
            <ImageView
                android:id="@+id/iv_share_img"
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_margin="@dimen/padding_five"
                android:src="@drawable/info_xreply"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right" >
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_info_comment"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon"
                        android:src="@drawable/info_xcomment"
                        android:layout_margin="@dimen/padding_five"
                        android:layout_toLeftOf="@+id/info_comment_num"/>
                    <TextView
                        android:id="@+id/info_comment_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment_num"
                        android:paddingLeft="@dimen/padding_zero"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:paddingRight="@dimen/padding_eight"
                        android:textSize="@dimen/fontsize"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/line"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/comments_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f4f2f2"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
